Work Package 1 COMPLETE.

--- a/MusicForum/appsettings.json
+++ b/MusicForum/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MusicForumContext": "Server=(localdb)\\mssqllocaldb;Database=MusicForumContext-789717f7-0bbc-47a7-baca-7f0e460264bd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
