--- a/MusicForum/appsettings.json
+++ b/MusicForum/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MusicForumContext": "Server=(localdb)\\mssqllocaldb;Database=MusicForumContext-789717f7-0bbc-47a7-baca-7f0e460264bd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RPMForumContext": "Server=(localdb)\\mssqllocaldb;Database=RPMForumContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
